--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -9,4 +9,19 @@ user.roles=Roles
 user.active=Active
 user.registered=Registered
 meal.title=Meals
+meal.date=Date/Time
+meal.description=Description
+meal.calories=Calories
+meal.add=Add Meal
+meal.filter=Filter
+meal.save=Save
+meal.cancel=Cancel
+meal.fromDate=From Date
+meal.toDate=To Date
+meal.fromTime=From Time
+meal.toTime=To Time
+meal.update=Update
+meal.delete=Delete
+meal.create=Create meal
+meal.edit=Edit meal
 common.select=Select
